add links to campbell.vertesi.com to about snippets.

--- a/_includes/custom/asides/about.html
+++ b/_includes/custom/asides/about.html
@@ -1,6 +1,6 @@
 <section>
 <h1>About</h1>
-<p>My name is Campbell Vertesi, and I do a lot of things. I&rsquo;m an <a href="http://thecastmusic.com/">opera singer</a>, an open source evangelist, a martial arts student, and a web developer. I&rsquo;ve been a <a href="https://drupal.org">Drupal</a>ist for 10 years, and I presently work as a Technical Architect and Lead Evangelist for <a href="http://forumone.com" title="Forum One">Forum One</a>, where I get to help great organizations handle tough technological challenges.</p>
+<p>My name is <a href="http://campbell.vertesi.com/">Campbell Vertesi</a>, and I do a lot of things. I&rsquo;m an <a href="http://thecastmusic.com/">opera singer</a>, an open source evangelist, a martial arts student, and a web developer. I&rsquo;ve been a <a href="https://drupal.org">Drupal</a>ist for 10 years, and I presently work as a Technical Architect and Lead Evangelist for <a href="http://forumone.com" title="Forum One">Forum One</a>, where I get to help great organizations handle tough technological challenges.</p>
 
 <p>This is a technical blog that&rsquo;s partly a reference for myself, partly a pointer for all the instructions I end up writing for others, and partly a document of my technical history. I&rsquo;m someone who is involved in a lot of different fields and specialties, and it&rsquo;s nice to have it all catalogued somewhere. I&rsquo;ve written this blog on various platforms under different names (swearingatcomputers, mostly), but this is where I&rsquo;m hoping it will stay for awhile.</p>
 
