float header image right

--- a/_includes/custom/header.html
+++ b/_includes/custom/header.html
@@ -1,5 +1,5 @@
 <hgroup>
-<a href="{{ root_url }}/"><img src="/images/oh_the_huge_manatee.png" /></a><div class="titles"><h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
+<a href="{{ root_url }}/" style="float:right"><img  src="/images/oh_the_huge_manatee.png" /></a><div class="titles"><h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
   {% endif %}
