--- a/_includes/custom/asides/about.html
+++ b/_includes/custom/asides/about.html
@@ -1,4 +1,5 @@
 <section>
+<img src="/images/headshot.jpg" alt="Campbell Vertesi profile picture" />
 <h1>About</h1>
 <p>My name is <a href="https://campbell.vertesi.com/" title="Campbell Vertesi">Campbell Vertesi</a>. I'm a technical architect with <a href="https://microsoft.com/" title="Microsoft">Microsoft</a>, and an <a href="https://thecastmusic.com/" title="The Cast - the opera band">opera singer</a>.</p>
 
