Comment out og:image tag

--- a/_includes/custom/head.html
+++ b/_includes/custom/head.html
@@ -16,4 +16,5 @@
 <meta property="og:type" content="article" />
 <meta property="og:title" content="{{ title }}" />
 <meta property="og:description" content="{{ description | strip_html | condense_spaces | truncate:300 }}" />
-<meta property="og:image" content="{{ site.url }}/images/oh_the_huge_manatee.png" />
+<!--
+  <meta property="og:image" content="{{ site.url }}/images/headshot.jpg" /> -->
