Update about text

--- a/_includes/custom/asides/about.html
+++ b/_includes/custom/asides/about.html
@@ -1,7 +1,7 @@
 <section>
 <img src="/images/headshot.jpg" alt="Campbell Vertesi profile picture" />
 <h1>About</h1>
-<p>My name is <a href="https://campbell.vertesi.com/" title="Campbell Vertesi">Campbell Vertesi</a>. I'm a technical architect with <a href="https://microsoft.com/" title="Microsoft">Microsoft</a>, and an <a href="https://thecastmusic.com/" title="The Cast - the opera band">opera singer</a>.</p>
+<p>My name is <a href="https://campbell.vertesi.com/" title="Campbell Vertesi">Campbell Vertesi</a>. I work  with <a href="https://microsoft.com/" title="Microsoft">Microsoft</a> on cutting-edge Open Source. I'm also an <a href="https://thecastmusic.com/" title="The Cast - the opera band">opera singer</a>.</p>
 
 <p>I've been working with computers for 21 years, with PHP and Drupal for 13 of those. I started with desktop repair, moved into sysadmin work, and eventually discovered web development. Since then I've been in most roles in the web consultant ecosystem: coder, themer, project manager, information architect, technical lead, CEO, and CTO. I've presented at many conferences, including almost 20 Drupalcons. <a href="/about-me.html" title="More about me">More about me</a>.</p>
 
